--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <link rel="stylesheet" href="style.css" />
     <script src="./models/keyboard.class.js"></script>
     <script src="./models/game_components.class.js"></script>
-    <script src="./models/status_bar.class.js"></script>
     <script src="./models/movable_object.class.js"></script>
+    <script src="./models/status_bar.class.js"></script>
+    <script src="./models/bottle_on_the_ground.class.js"></script>
     <script src="./models/character.class.js"></script>
     <script src="./models/chicken.class.js"></script>
     <script src="./models/endboss.class.js"></script>
-    <script src="./models/bottle.class.js"></script>
+    <script src="./models/thrown_bottle.class.js"></script>
     <script src="./models/background_objects.class.js"></script>
     <script src="./models/cloud.class.js"></script>
-    <script src="./models/world.class.js"></script>
     <script src="./models/level.class.js"></script>
+    <script src="./models/world.class.js"></script>
+    <script src="./levels/level1.js"></script>
     <script src="./js/game.js"></script>
     <script src="./js/resize.js"></script>
-    <script src="./levels/level1.js"></script>
     <title>El Pollo Loco</title>
   </head>
   <body onload="init()">
