--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./models/movable_object.class.js"></script>
     <script src="./models/status_bar.class.js"></script>
     <script src="./models/bottle_on_the_ground.class.js"></script>
+    <script src="./models/coin.class.js"></script>
     <script src="./models/character.class.js"></script>
     <script src="./models/chicken.class.js"></script>
     <script src="./models/endboss.class.js"></script>
