removed one interval in endboss, added startscreen-btn, clear character-interval

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   <body onload="init()">
     <div id="canvas-container">
       <canvas id="canvas"></canvas>
+      <div id="startscreen">
+        <button id="start">Start Game</button>
+      </div>
     </div>
     <!-- <button id="fullscreen-btn" onclick="fullscreen()"></button> -->
   </body>
