--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@900&family=Sigmar+One&display=swap" rel="stylesheet" />
     <script src="./models/keyboard.class.js"></script>
     <script src="./models/game_components.class.js"></script>
     <script src="./models/movable_object.class.js"></script>
@@ -26,11 +29,15 @@
   </head>
   <body onload="init()">
     <div id="canvas-container">
+      <div id="startscreen" class="screen"></div>
       <canvas id="canvas"></canvas>
-      <div id="startscreen">
-        <button id="start">Start Game</button>
-      </div>
+      <div id="endscreen" class="screen d-none"></div>
     </div>
-    <!-- <button id="fullscreen-btn" onclick="fullscreen()"></button> -->
+    <div id="button-container">
+      <button id="start-btn" onclick="startGame()">Start Game</button>
+      <button id="restart-btn" class="d-none">Start New Game</button>
+      <button id="help-btn">Help</button>
+      <button id="pause-btn">Pause</button>
+    </div>
   </body>
 </html>
