bugfix: startGame when help open, restart Level - button after startGame

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <button id="start-btn" onclick="startGame()">Start Game</button>
       <button id="restart-btn" class="d-none">Start New Game</button>
       <button id="help-btn" onclick="openHelp()">Help</button>
-      <button id="pause-btn" disabled onclick="pauseGame()">Pause</button>
+      <button id="pause-btn" onclick="pauseGame()" disabled>Pause</button>
     </div>
   </body>
 </html>
