--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     <script src="./models/coin.class.js"></script>
     <script src="./models/character.class.js"></script>
     <script src="./models/chicken.class.js"></script>
+    <script src="./models/chick.class.js"></script>
     <script src="./models/endboss.class.js"></script>
     <script src="./models/thrown_bottle.class.js"></script>
     <script src="./models/background_objects.class.js"></script>
     <script src="./models/cloud.class.js"></script>
     <script src="./models/level.class.js"></script>
     <script src="./models/world.class.js"></script>
-    <script src="./levels/level1.js"></script>
+    <script src="./js/create_levels.js"></script>
     <script src="./js/game.js"></script>
     <script src="./js/resize.js"></script>
     <title>El Pollo Loco</title>
