--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <script src="./models/game_components.class.js"></script>
     <script src="./models/movable_object.class.js"></script>
     <script src="./models/status_bar.class.js"></script>
+    <script src="./models/lifebar.class.js"></script>
+    <script src="./models/bottlebar.class.js"></script>
+    <script src="./models/coinbar.class.js"></script>
     <script src="./models/bottle_on_the_ground.class.js"></script>
     <script src="./models/coin.class.js"></script>
     <script src="./models/character.class.js"></script>
