image-file, implemented in character

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="./models/cloud.class.js"></script>
     <script src="./models/level.class.js"></script>
     <script src="./models/world.class.js"></script>
+    <script src="./js/images.js"></script>
     <script src="./js/create_levels.js"></script>
     <script src="./js/game.js"></script>
     <script src="./js/resize.js"></script>
