added final endscreen after level 3

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <div id="startscreen" class="screen"></div>
       <div id="lostscreen" class="screen d-none"></div>
       <div id="wonscreen" class="screen d-none"></div>
+      <div id="gameover-screen" class="screen d-none"></div>
       <div id="button-container">
         <button type="button" id="start-btn" class="button--foreground" onclick="startGame()">Start Game</button>
         <button type="button" id="help-btn" class="button--foreground" onclick="openHelp()">Help</button>
