added background music

--- a/index.html
+++ b/index.html
@@ -87,5 +87,6 @@
         </table>
       </div>
     </div>
+    <audio id ="background-music" src="./audio/background_theme.mp3" loop volume = "0.1"></audio>
   </body>
 </html>
