--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
       <div id="lostscreen" class="screen d-none"></div>
       <div id="wonscreen" class="screen d-none"></div>
       <div id="gameover-screen" class="screen d-none"></div>
+      <div id="loading-screen" class="screen d-none">
+        <div id="loading-bar">
+          <div id="status"></div>
+        </div>
+      </div>
       <div id="button-container">
         <button type="button" id="start-btn" class="button--foreground" onclick="startGame()">Start Game</button>
         <button type="button" id="help-btn" class="button--foreground" onclick="openHelp()">Help</button>
