--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
             </tr>
           </tbody>
         </table>
+        <h2>And on my mobile device?</h2>
+        <p>Swipe into the direction you want Pepe to move to. For throwing bottles click the bottle-button on the left.</p>
       </div>
     </div>
     <audio id ="background-music" src="./audio/background_theme.mp3" loop volume = "0.1"></audio>
