--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@900&family=Sigmar+One&display=swap"
-      rel="stylesheet"
-    />
     <script src="./models/keyboard.class.js"></script>
     <script src="./models/game_components.class.js"></script>
     <script src="./models/movable_object.class.js"></script>
@@ -59,8 +53,8 @@
         <div id="close-help" onclick="closeHelp()">
           <img src="./img/icon_close2.svg" alt="Close Help" />
         </div>
-        <h1>El Pollo Pelogroso - Help</h1>
-        <p>Help Pepe Peligroso to find his way through the world of El Pollo Poligroso!</p>
+        <h1>El Pollo Loco - Help</h1>
+        <p>Help Pepe Peligroso to find his way through the world of El Pollo Loco!</p>
         <p>
           Collect coins to gain life and collect bottles for throwing them at enemies - but be careful: the endboss can
           only be beaten with bottles, so don't waste them!
